# monorepo

./: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-monorepo  bazel-out  bazel-testlogs
libs/real/: go.mod
libs/real/pkg/: BUILD.bazel  external.go
services/testing/: BUILD.bazel  go.mod  main.go
services/testing/pkg/: BUILD.bazel  internal.go
